Improvements to Japanese translations provided by tak7iji.

--- a/java/org/apache/catalina/servlets/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_fr.properties
@@ -43,6 +43,7 @@ cgiServlet.runStdErrFail=Problème d'entrée sortie pour le stderr
 defaultServlet.blockExternalEntity=L''accès aux entités externes avec le publicId [{0}] et le systemId [{1}] est bloqué
 defaultServlet.blockExternalEntity2=L''accès à l''entité externe nommée [{0}], publicId [{1}], baseURI [{2}], systemId [{3}] a été bloqué
 defaultServlet.blockExternalSubset=L''accès au sous-ensemble externe de nom [{0}] et de baseURI [{1}] a été bloqué
+defaultServlet.deleteTempFileFailed=Echec lors de la suppression du fichier [{0}] utilisé pour le PUT partiel
 defaultServlet.directory.parent=Jusqu''à [{0}]
 defaultServlet.directory.title=Liste du répertoire pour [{0}]
 defaultServlet.globalXSLTTooBig=Le fichier XSLT global [{0}] est trop grand pour être mis en tampon
