--- a/java/org/apache/catalina/tribes/membership/cloud/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/tribes/membership/cloud/LocalStrings_fr.properties
@@ -38,6 +38,7 @@ kubernetesMembershipProvider.jsonError=Erreur JSON
 kubernetesMembershipProvider.memberError=Erreur de création d'un membre
 kubernetesMembershipProvider.noKey=La clé du certificat client n'a pas été spécifiée dans l'environnement
 kubernetesMembershipProvider.noNamespace=L'espace de noms n'est pas paramétré
+kubernetesMembershipProvider.serviceAccountTokenMissing=Le jeton du compte de service n''a pas été trouvé à [{0}]
 kubernetesMembershipProvider.streamError=Échec d'ouverture du flux
 
 tokenStream.failedConnection=Impossible de se connecter à [{0}] avec le token [{1}]
