--- a/java/org/apache/catalina/servlets/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_ja.properties
@@ -43,6 +43,7 @@ cgiServlet.runStdErrFail=stderrでI/O問題
 defaultServlet.blockExternalEntity=publicId [{0}]およびsystemId [{0}]を持つ外部エンティティへのアクセスがブロックされました
 defaultServlet.blockExternalEntity2=エンティティ名 [{0}]、publicId [{1}]、baseURI [{2}] および systemId [{3}] を持つ外部エンティティへのアクセスがブロックされました
 defaultServlet.blockExternalSubset=名前[{0}]およびベースURI [{1}]を持つ外部サブセットへのアクセスがブロックされました
+defaultServlet.deleteTempFileFailed=部分的なPUTに使用された一時ファイル [{0}] が削除できませんでした
 defaultServlet.directory.parent=[{0}] に移動
 defaultServlet.directory.title=[{0}] のディレクトリの一覧
 defaultServlet.globalXSLTTooBig=グローバル XSLT ファイル [{0}] はバッファリングするには大きすぎます
