--- a/java/org/apache/catalina/tribes/membership/cloud/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/tribes/membership/cloud/LocalStrings_ja.properties
@@ -38,6 +38,7 @@ kubernetesMembershipProvider.jsonError=JSONエラー
 kubernetesMembershipProvider.memberError=メンバー作成中のエラー
 kubernetesMembershipProvider.noKey=クライアント証明書キーが環境変数に指定されていませんでした
 kubernetesMembershipProvider.noNamespace=Namespace が未指定です。
+kubernetesMembershipProvider.serviceAccountTokenMissing=サービスアカウントのトークンが [{0}] に見つかりません
 kubernetesMembershipProvider.streamError=ストリームのオープンに失敗しました
 
 tokenStream.failedConnection=トークン[{1}]で[{0}]への接続に失敗しました。
