--- a/java/org/apache/tomcat/util/modeler/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/modeler/LocalStrings_fr.properties
@@ -40,6 +40,7 @@ managedMBean.noSet=Impossible de trouver la méthode de modification [{0}] sur l
 modules.digesterParseError=Erreur lors de l'analyse des données du registre
 modules.readDescriptorsError=Erreur lors de la lecture des descripteurs
 
+registry.cannotAccessRegistry=L''objet garde [{0}] ne permet pas l''accès au registre
 registry.createdServer=Le MBeanServer a été crée
 registry.existingServer=Le MBeanServer existant est utilisé
 registry.initError=Erreur lors de l''initialisation [{0}]
