--- a/java/org/apache/naming/LocalStrings_fr.properties
+++ b/java/org/apache/naming/LocalStrings_fr.properties
@@ -21,6 +21,8 @@ contextBindings.noContextBoundToThread=Aucun Contexte de nommage lié à ce thre
 contextBindings.unknownContext=Nom de Contexte inconnu : [{0}]
 
 namingContext.alreadyBound=Le Nom [{0}] est déjà lié à ce Contexte
+namingContext.contextExpected=Le nom [{0}] n''est pas associé à un Context
+namingContext.failResolvingReference=Erreur inattendue lors de la résolution de la référence avec le nom [{0}]
 namingContext.invalidName=Le Nom est invalide
 namingContext.nameNotBound=Le Nom [{0}] n''est pas lié à ce Contexte
 namingContext.noAbsoluteName=Impossible de générer un nom absolu pour cet espace de nommage (namespace)
