improve log context in order to add thread name information.

--- a/java/org/apache/catalina/loader/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/loader/LocalStrings_zh_CN.properties
@@ -49,7 +49,7 @@ webappClassLoader.removeTransformer=已从web应用程序[{1}]中删除类文件
 webappClassLoader.resourceModified=资源[{0}]已被修改。上次修改时间是[{1}]，现在是[{2}]
 webappClassLoader.restrictedPackage=安全冲突，尝试使用受限类[{0}]
 webappClassLoader.stackTrace=Web应用程序[{0}]似乎启动了一个名为[{1}]的线程，但未能停止它。这很可能会造成内存泄漏。线程的堆栈跟踪：[{2}]
-webappClassLoader.stackTraceRequestThread=web应用程序[{0}]仍在处理一个尚未完成的请求。这很可能会造成内存泄漏。您可以使用标准上下文实现的unloadDelay属性来控制请求完成所允许的时间。请求处理线程的堆栈跟踪：[{2}]
+webappClassLoader.stackTraceRequestThread=web应用程序[{0}]中的线程[{1}]仍在处理一个尚未完成的请求。这很可能会造成内存泄漏。您可以使用标准上下文实现的unloadDelay属性来控制请求完成所允许的时间。请求处理线程的堆栈跟踪：[{2}]
 webappClassLoader.stopThreadFail=为web应用程序[{1}]终止线程[{0}]失败
 webappClassLoader.stopTimerThreadFail=无法终止名为[{0}]的TimerThread，web应用程序：[{1}]
 webappClassLoader.stopped=非法访问：此Web应用程序实例已停止。无法加载[{0}]。为了调试以及终止导致非法访问的线程，将抛出以下堆栈跟踪。
